--- a/content/docs/introduction.mdx
+++ b/content/docs/introduction.mdx
@@ -3,13 +3,7 @@ title: Introduction
 weight: 1
 ---
 
-<ErrorAlert title="Under Development">
-  Consider that Cyrus is under heavy development and is not stable yet.
-  Therefore, it is not recommended for production environments or critical
-  applications where stability and long-term support are paramount. Users should
-  anticipate frequent updates, breaking changes, and potential bugs as the
-  project evolves.
-</ErrorAlert>
+<ErrorAlert title="Under Development" />
 
 # Documentation
 
@@ -18,38 +12,6 @@ Welcome to the official documentation for Cyrus. Here you'll find everything you
 <br />
 
 <div className="flex flex-col md:flex-row gap-4">
-  <Card className="shadow-lg">
-    <CardHeader>
-      <CardTitle className="flex items-center gap-2">For Newcomers</CardTitle>
-    </CardHeader>
-    <CardContent>
-      <div className="space-y-4">
-        <div className="text-gray-600 dark:text-muted-foreground">
-          If you're new to Cyrus, start with our comprehensive tutorial to learn
-          the basics and get up to speed quickly.
-        </div>
-
-        <Link href="/docs/tutorial/basic-syntax" className="mt-2 block">
-          <Button>Get Started</Button>
-        </Link>
-      </div>
-    </CardContent>
-  </Card>
-
-  <Card className="shadow-lg">
-    <CardHeader>
-      <CardTitle className="flex items-center gap-2">Language Reference</CardTitle>
-    </CardHeader>
-    <CardContent>
-      <div className="space-y-4">
-        <div className="text-gray-600 dark:text-muted-foreground">
-          For a detailed overview of Cyrus's built-in types, functions, and modules, check out our language reference.
-        </div>
-
-        <Link href="/docs/langref" className="mt-2 block">
-          <Button variant="outline">Explore Reference</Button>
-        </Link>
-      </div>
-    </CardContent>
-  </Card>
+  <NewcomersCard />
+  <ReferenceCard />
 </div>
