--- a/content/fa-docs/getting-started/design-goals.mdx
+++ b/content/fa-docs/getting-started/design-goals.mdx
@@ -1,26 +1,94 @@
 ---
 title: اهداف طراحی
-weight: 5
+weight: 2
 ---
 
-# اهداف طراحی
+# زبان برنامه‌نویسی سایروس (Cyrus)
 
-سایروس با اهداف مشخصی طراحی شده است:
+> _ساده مثل C، مدرن مثل Rust، بدون دردسر._
 
-## سادگی
+سایروس یک زبان برنامه‌نویسی سطح پایین و امریتیو (Imperative) است که برای توسعه‌دهندگانی طراحی شده که به دنبال قدرت مدرن هستند، اما تمایلی به پیچیدگی‌های مدرن ندارند.
 
-- نحو تمیز و قابل فهم
-- یادگیری آسان
-- کد خوانا
+این زبان با تمرکز بر عملکرد بالا و وضوح طراحی شده است. دارای یک مدل حافظه سبک، بدون وابستگی به رانتایم، و نگارشی ساده و ابداعی است. اگر با زبان‌هایی مانند C یا Go آشنایی داشته باشید، سایروس برایتان محیطی آشنا و حتی لذت‌بخش‌تر خواهد بود.
 
-## عملکرد
+---
 
-- کامپایل سریع
-- اجرای کارآمد
-- بهینه‌سازی خودکار
+## ✨ فلسفه‌ی اصلی
 
-## امنیت
+سایروس از دل نارضایتی از پیچیدگی بی‌مورد زبان‌های برنامه‌نویسی مدرن زاده شد. گرچه زبان‌هایی مانند Rust و Go قابلیت‌های زیادی دارند، اما همراه آن‌ها منحنی یادگیری، پیچیدگی رانتایم، یا انتزاعاتی ارائه می‌شود که بسیاری از برنامه‌نویسان سیستم واقعاً نیازی به آن‌ها ندارند.
 
-- سیستم نوع قوی
-- مدیریت حافظه ایمن
-- تشخیص خطا در زمان کامپایل
+سایروس بر پایه‌ی این فرض بنا شده که **سادگی، صراحت، و زیبایی** می‌توانند در کنار هم وجود داشته باشند؛ بدون آن‌که چیزی از عملکرد کاسته شود.
+
+---
+
+## 🚀 ویژگی‌ها
+
+### 🧠 سادگی مبتنی بر سینتکس
+
+- از پایه با هدف **حداکثر خوانایی و حداقل بار ذهنی** طراحی شده است.
+- کلونی از C نیست، اما برای ذهن‌هایی که به سبک C فکر می‌کنند بسیار آشنا خواهد بود.
+- بدون جادوی پنهان، بدون تبدیل‌های نامرئی، و بدون قواعد پیچیده و غیرقابل درک.
+
+### ⚙️ مدیریت حافظه
+
+- **بدون استفاده از گاربج کالکتور (GC)**.
+- بهره‌گیری از **ابجکت‌های الوکیتر سفارشی** و **محدوده‌های طول عمر (Lifetime Zones)** برای گروه‌بندی و آزادسازی حافظه.
+- کنترل کاملاً پیش‌بینی‌پذیر و بدون مدل‌های پیچیده‌ی مالکیت مانند Rust.
+- طراحی‌شده با هدف **بررسی ایمنی در زمان کامپایل** و دخالت حداقلی در زمان اجرا.
+
+### 🔩 کنترل سطح پایین
+
+- دسترسی و کنترل کامل بر حافظه سیستم و پشته (stack).
+- پشتیبانی اختیاری از اسمبلی خطی (Inline Assembly).
+- به‌صورت پیش‌فرض ایمن است، اما در صورت نیاز می‌توان با استفاده از بلوک‌های `unsafe` به تمام امکانات دسترسی داشت.
+
+### 📦 سیستم ماژول زیبا و شفاف
+
+- سیستم ماژول تمیز، گویا، و خوانا.
+- بدون نیاز به ابزارهای پیچیده ساخت و ساز (build tools)، فقط ایمپورت‌های ساده و کنترل وابستگی واضح.
+
+### 🛠 مبتنی بر LLVM
+
+- بک‌اند قدرتمند مبتنی بر LLVM.
+- تبدیل مستقیم به کد باینری سریع و کارآمد.
+- پشتیبانی از کامپایل متقابل (cross-compilation) و یکپارچه‌سازی با ابزارهای آینده.
+
+### 🔄 پشتیبانی از هم‌زمانی (در حال بررسی و طراحی)
+
+- پشتیبانی در سطح زبان برای هم‌زمانی، بدون نیاز به رانتایم.
+- مبتنی بر الگوهای مالکیت و مدیریت منابع که در زمینه‌ی هم‌زمانی نیز کاربرد دارند.
+
+---
+
+## 👤 این زبان برای چه کسانی طراحی شده است؟
+
+سایروس مناسب است برای:
+
+- توسعه‌دهندگان سیستم که عاشق **C** هستند ولی به‌دنبال نسخه‌ای مدرن و بدون GC هستند.
+- برنامه‌نویسانی که از **منحنی یادگیری Rust** خسته شده‌اند ولی همچنان به دنبال امنیت حافظه و عملکرد بالا هستند.
+- توسعه‌دهندگان سطح پایین یا امبدد (Embedded/OS) که نیاز به **رانتایم سبک و کنترل کامل بر سخت‌افزار** دارند.
+- هر کسی که به‌دنبال زبانی سطح پایین، زیبا و خوانا است که به شعور او احترام می‌گذارد.
+
+فعلاً پیشنهاد نمی‌شود برای:
+
+- افراد کاملاً مبتدی که تجربه‌ای در زبان‌های سطح پایین ندارند.
+- توسعه‌دهندگانی که به دنبال مدیریت حافظه خودکار و ایمنی رانتایم بدون آشنایی با الگوهای تخصیص حافظه هستند.
+
+---
+
+## 🧪 وضعیت فعلی
+
+زبان سایروس در حال توسعه فعال است و با سرعت در حال رشد است.
+
+برای مشاهده نقشه راه کامل توسعه، لطفاً به پروژه رسمی ما در گیت‌هاب مراجعه کنید:
+
+[https://github.com/orgs/cyrus-lang/projects/1](https://github.com/orgs/cyrus-lang/projects/1)
+
+---
+
+## 📚 باورهای طراحی
+
+- **سادگی، یک قابلیت است.**
+- **خوانایی، بخشی از عملکرد است.**
+- **عملکرد، غیرقابل مذاکره است.**
+- **کنترل باید در دستان برنامه‌نویس باشد.**
