update design goals

--- a/content/fa-docs/getting-started/design-goals.mdx
+++ b/content/fa-docs/getting-started/design-goals.mdx
@@ -3,11 +3,9 @@ title: اهداف طراحی
 weight: 2
 ---
 
-# زبان برنامه‌نویسی سایروس (Cyrus)
+# زبان برنامه‌نویسی سایروس
 
-> _ساده مثل C، مدرن مثل Rust، بدون دردسر._
-
-سایروس یک زبان برنامه‌نویسی سطح پایین و امریتیو (Imperative) است که برای توسعه‌دهندگانی طراحی شده که به دنبال قدرت مدرن هستند، اما تمایلی به پیچیدگی‌های مدرن ندارند.
+سایروس یک زبان برنامه‌نویسی سطح پایین و Imperative است که برای توسعه‌دهندگانی طراحی شده که به دنبال قدرت مدرن هستند، اما تمایلی به پیچیدگی‌های مدرن ندارند.
 
 این زبان با تمرکز بر عملکرد بالا و وضوح طراحی شده است. دارای یک مدل حافظه سبک، بدون وابستگی به رانتایم، و نگارشی ساده و ابداعی است. اگر با زبان‌هایی مانند C یا Go آشنایی داشته باشید، سایروس برایتان محیطی آشنا و حتی لذت‌بخش‌تر خواهد بود.
 
@@ -80,9 +78,7 @@ weight: 2
 
 زبان سایروس در حال توسعه فعال است و با سرعت در حال رشد است.
 
-برای مشاهده نقشه راه کامل توسعه، لطفاً به پروژه رسمی ما در گیت‌هاب مراجعه کنید:
-
-[https://github.com/orgs/cyrus-lang/projects/1](https://github.com/orgs/cyrus-lang/projects/1)
+برای مشاهده نقشه راه کامل توسعه، لطفاً به [پروژه رسمی ما در گیت‌هاب](https://github.com/orgs/cyrus-lang/projects/1) مراجعه کنید.
 
 ---
 
