--- a/content/en-docs/tutorial/basic-syntax.mdx
+++ b/content/en-docs/tutorial/basic-syntax.mdx
@@ -5,27 +5,100 @@ weight: 1
 
 # Basic Syntax
 
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+This article is an introduction to the Cyrus Programming Language. It assumes you already have a basic understanding of programming concepts such as variables, statements, and types. Here, you’ll see how familiar ideas are expressed in Cyrus, while also being introduced to new concepts that make the language unique.
+
+If you haven't installed Cyrus yet, start with the [Getting Started](/en/docs/getting-started/install-compiler-binary) guide before continuing.
+
+<br />
 
 ## Comments
 
-Coming soon... 
+Comments are pieces of text ignored by the compiler.
+They're useful for explaining code, leaving notes, or temporarily disabling parts of a program. Cyrus supports both single-line and multi-line comments.
 
-## Literals
+- Single-line Comments
 
-Coming soon... 
+```cyrus
+// This is a single-line comment
+#msg: char* = "Hello, Cyrus!"; // You can also place it after code
+```
+
+- Multi-line Comments
+
+```cyrus
+/*
+  Outer comment start
+  /* Nested comment inside */
+  Outer comment end
+
+  NOTE: Multi-line comments can also be nested!
+*/
+```
+
+<br />
+
+## Const string and Character Literals
+
+String literals in Cyrus are enclosed in double quotes **"xxx"**, while character literals are enclosed in single quotes **'x'**.
+Both forms represent sequences of Unicode characters, but they differ in intent and usage:
+
+- String literals produce values of type **char\***, which can hold arbitrarily many characters.
+- Character literals produce values of type **char**, which always represent exactly one Unicode scalar value.
+
+```cyrus
+#greeting: char* = "Hello, Cyrus!";
+#letter: char = 'A';
+```
+
+### Escapes
+
+Special characters that are difficult to type directly or would otherwise break the syntax can be written using escape sequences. All escape sequences begin with a backslash (\).
+
+Common escapes include:
+
+- **\n** - newline (line feed, U+000A)
+- **\t** - horizontal tab (U+0009)
+- **\r** - carriage return (U+000D)
+- **\b** - backspace (U+0008)
+- **\a** - bell/alert (U+0007)
+- **\v** - vertical tab (U+000B)
+- **\f** - form feed (U+000C)
+- **\\** - literal backslash
+- **\"** - double quote (inside strings)
+- **\'** - single quote (inside chars or strings)
+
+Example:
+
+```cyrus
+#poem: char* = "Line one\nLine two\nLine three";
+#quote: char* = "She said: \"Cyrus is great!\"";
+#backslash: char = '\\';
+```
+
+<br />
+
+### Unicode and Emojis
+
+Cyrus supports Unicode characters directly in string and character literals. You can type emojis, accented letters, or any other Unicode characters inside quotes:
+
+```cyrus
+#letter: char = 'A';                     // ✅ Works
+#smile: char* = "😇";                    // ✅ Works in a string
+#rocket: string = "Let's go! \u{1F680}"; // ✅ Works, 🚀
+#greek_alpha: char* = "\u03B1";          // ✅ Works, α
+#emoji_char: char = '😇';                // ❌ Does NOT work
+#multibyte_char: char = '\u263A';        // ❌ Does NOT work 
+```
+
+<br />
 
 ## Base64 & Hex Data Literals
 
-Coming soon... 
-
-## Escape Characters
-
-Coming soon... 
+Coming soon...
 
 ## Basic Types
 
-Coming soon... 
+Coming soon...
 
 ## Integer Constants
 
@@ -33,11 +106,11 @@ Coming soon...
 - Hexadecimal
 - Octal
 
-Coming soon... 
+Coming soon...
 
 ## Constant Suffixes
 
-Coming soon... 
+Coming soon...
 
 ## Arrays
 
@@ -54,4 +127,3 @@ Coming soon...
 ## Pointers
 
 Coming soon...
-
