--- a/content/en-docs/getting-started/install-compiler-binary.mdx
+++ b/content/en-docs/getting-started/install-compiler-binary.mdx
@@ -38,12 +38,12 @@ source ~/.zshrc
 
 <br />
 
-## 4. Verify the Installation
+## 3. Verify the Installation
 
 Check the compiler works:
 
 ```cyrus
-cyrus --version
+cyrus version
 ```
 
 Expected output: 
