--- a/content/en-docs/tutorial/expressions.mdx
+++ b/content/en-docs/tutorial/expressions.mdx
@@ -239,6 +239,69 @@ The simplest form is **=**, but there are also compound assignments that perform
 
 <br />
 
+## Unary Operators
+
+Unary operators operate on a single operand and modify its value by **1**.  
+**Prefix** (`++i`, `--i`) updates the variable **before** it’s used in an expression.  
+**Postfix** (`i++`, `i--`) updates the variable **after** it’s used in an expression.
+
+<Table>
+
+{" "}
+<TableHeader>
+  <TableRow>
+    <TableHead className="w-[140px]">Operator</TableHead>
+    <TableHead>Meaning</TableHead>
+    <TableHead>Example</TableHead>
+    <TableHead className="text-right">Result</TableHead>
+  </TableRow>
+</TableHeader>
+
+{" "}
+<TableBody>
+  <TableRow>
+    <TableCell className="font-medium">i++</TableCell>
+    <TableCell>
+      Post-increment: returns current value, then increases by 1
+    </TableCell>
+    <TableCell>i = 5; j = i++</TableCell>
+    <TableCell className="text-right">i = 6, j = 5</TableCell>
+  </TableRow>
+  <TableRow>
+    <TableCell className="font-medium">++i</TableCell>
+    <TableCell>
+      Pre-increment: increases by 1, then returns the new value
+    </TableCell>
+    <TableCell>i = 5; j = ++i</TableCell>
+    <TableCell className="text-right">i = 6, j = 6</TableCell>
+  </TableRow>
+  <TableRow>
+    <TableCell className="font-medium">i--</TableCell>
+    <TableCell>
+      Post-decrement: returns current value, then decreases by 1
+    </TableCell>
+    <TableCell>i = 5; j = i--</TableCell>
+    <TableCell className="text-right">i = 4, j = 5</TableCell>
+  </TableRow>
+  <TableRow>
+    <TableCell className="font-medium">--i</TableCell>
+    <TableCell>
+      Pre-decrement: decreases by 1, then returns the new value
+    </TableCell>
+    <TableCell>i = 5; j = --i</TableCell>
+    <TableCell className="text-right">i = 4, j = 4</TableCell>
+  </TableRow>
+</TableBody>
+
+</Table>
+
+Notes:
+
+> - Works only on mutable lvalues; using on constants or rvalues should be a compile error.
+> - Avoid relying on multiple increments of the same variable within a single expression if your language disallows/diagnoses unspecified order of evaluation.
+
+<br />
+
 ## Null-Coalescing Operator
 
 The null-coalescing operator (||) is used with pointers to select the first non-null value from a chain of operands.  
