--- a/content/en-docs/tutorial/control-flow.mdx
+++ b/content/en-docs/tutorial/control-flow.mdx
@@ -113,7 +113,86 @@ while (true) {
     i++;
 
     if (i == 10) {
-        break; // exit when i reaches 10
+        break; // exit when i reaches 10.
     }
 }
 ```
+
+<br />
+
+## Switch Statement
+
+A switch statement allows execution to branch based on the value of an expression. It provides a concise way to compare against multiple possibilities without writing a long chain of if–else if statements.
+
+⚠️ Note: This is not pattern matching. Cases in Cyrus are always compared against raw values, not structural patterns or conditions.
+
+<br />
+
+### Basic Form
+
+```cyrus
+#i: int = 0;
+
+switch (i) {
+    case 0:
+        // This block runs if i is equal to 0.
+        break;
+
+    case 1:
+        // This block runs if i is equal to 1.
+        break;
+
+    default:
+        // This block runs if none of the above cases match.
+        break;
+}
+```
+
+<br />
+
+### Multiple values per case
+
+A single case can match multiple values, separated by commas. If the expression matches any of the values, that case runs.
+
+```cyrus
+#i: int = 4;
+
+switch (i) {
+    case 2, 4, 6, 8:
+        // Matches even numbers.
+        break;
+    case 1, 3, 5, 7:
+        // Matches odd numbers.
+        break;
+
+    default:
+        // This block runs if none of the above cases match.
+        break;
+}
+```
+
+<br />
+
+### Fallthrough behavior
+
+In Cyrus, switch statements automatically fall through to the next case unless you explicitly use break.
+This is the same behavior as in C and C++, and unlike languages such as Go or Rust where each case ends automatically.
+
+```cyrus
+#i: int = 2;
+
+switch (i) {
+    case 2:
+        // Runs when i == 2
+        // Execution continues into the next case unless we break.
+    case 3:
+        // This also runs, because there was no break after case 2.
+        break;
+}
+```
+
+<br />
+
+### Enum Variants
+
+Switch statements can also match enum variants, but that will be explained in detail in the future on the Enums page.
