--- a/content/en-docs/tutorial/expressions.mdx
+++ b/content/en-docs/tutorial/expressions.mdx
@@ -275,6 +275,146 @@ The simplest form is **=**, but there are also compound assignments that perform
 
 <br />
 
+## Operator Precedence & Associativity
+
+Associativity determines how operators of the same precedence are grouped: left-to-right or right-to-left.
+Parentheses () can be used to explicitly control evaluation order.
+
+<Table>
+  <TableHeader>
+    <TableRow>
+      <TableHead>Operator / Type</TableHead>
+      <TableHead>Description</TableHead>
+      <TableHead style={{ textAlign: "right" }}>
+        Precedence / Associativity
+      </TableHead>
+    </TableRow>
+  </TableHeader>
+  <TableBody>
+    <TableRow>
+      <TableCell>Lowest</TableCell>
+      <TableCell>
+        Represents the lowest precedence. Used internally as a default when no
+        other precedence applies.
+      </TableCell>
+      <TableCell style={{ textAlign: "right" }}>Lowest</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>sizeof</TableCell>
+      <TableCell>Returns the size of a type or expression in bytes.</TableCell>
+      <TableCell style={{ textAlign: "right" }}>High / Right-to-left</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>||</TableCell>
+      <TableCell>
+        Logical OR. Returns true if at least one operand is true.
+      </TableCell>
+      <TableCell style={{ textAlign: "right" }}>Low / Left-to-right</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>&amp;&amp;</TableCell>
+      <TableCell>
+        Logical AND. Returns true only if both operands are true.
+      </TableCell>
+      <TableCell style={{ textAlign: "right" }}>Low / Left-to-right</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>==, !=</TableCell>
+      <TableCell>Equality and inequality comparison operators.</TableCell>
+      <TableCell style={{ textAlign: "right" }}>
+        Low-Mid / Left-to-right
+      </TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>&gt;, &lt;, &gt;=, &lt;=</TableCell>
+      <TableCell>Relational operators to compare values.</TableCell>
+      <TableCell style={{ textAlign: "right" }}>Mid / Left-to-right</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>+, -</TableCell>
+      <TableCell>Addition and subtraction operators.</TableCell>
+      <TableCell style={{ textAlign: "right" }}>
+        Mid-High / Left-to-right
+      </TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>*, /, %</TableCell>
+      <TableCell>Multiplication, division, and modulo operators.</TableCell>
+      <TableCell style={{ textAlign: "right" }}>High / Left-to-right</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>&amp;, |, ~, &amp;~</TableCell>
+      <TableCell>Bitwise AND, OR, NOT, and custom combination (~&).</TableCell>
+      <TableCell style={{ textAlign: "right" }}>High / Left-to-right</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>-X, !X</TableCell>
+      <TableCell>Unary prefix operators: negation and logical NOT.</TableCell>
+      <TableCell style={{ textAlign: "right" }}>High / Right-to-left</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>&amp;</TableCell>
+      <TableCell>
+        Address-of operator. Returns the memory address of its operand.
+      </TableCell>
+      <TableCell style={{ textAlign: "right" }}>
+        Higher than member access / Right-to-left
+      </TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>*</TableCell>
+      <TableCell>
+        Dereference operator. Accesses the value pointed to by a pointer.
+      </TableCell>
+      <TableCell style={{ textAlign: "right" }}>
+        Higher than member access / Right-to-left
+      </TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>my_function(x)</TableCell>
+      <TableCell>
+        Function call. Evaluates arguments and calls the function.
+      </TableCell>
+      <TableCell style={{ textAlign: "right" }}>
+        Very High / Left-to-right
+      </TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>array[index]</TableCell>
+      <TableCell>
+        Array indexing. Access the element at a specific position.
+      </TableCell>
+      <TableCell style={{ textAlign: "right" }}>
+        Very High / Left-to-right
+      </TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>Type conversion (cast)</TableCell>
+      <TableCell>Explicitly converts a value to a different type.</TableCell>
+      <TableCell style={{ textAlign: "right" }}>High / Right-to-left</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>.</TableCell>
+      <TableCell>
+        Member access. Accesses a field of a struct or object.
+      </TableCell>
+      <TableCell style={{ textAlign: "right" }}>High / Left-to-right</TableCell>
+    </TableRow>
+    <TableRow>
+      <TableCell>-&gt;</TableCell>
+      <TableCell>
+        Pointer member access. Dereferences a pointer to access a field of a
+        struct or object.
+      </TableCell>
+      <TableCell style={{ textAlign: "right" }}>High / Left-to-right</TableCell>
+    </TableRow>
+  </TableBody>
+</Table>
+
+Note: Unary operators like & (address-of) and \* (dereference) have higher precedence than member access (. / ->).
+
+<br />
+
 ## Unary Operators
 
 Unary operators operate on a single operand and modify its value by **1**.  
@@ -282,8 +422,6 @@ Unary operators operate on a single operand and modify its value by **1**.
 **Postfix** (`i++`, `i--`) updates the variable **after** it’s used in an expression.
 
 <Table>
-
-{" "}
 
 <TableHeader>
   <TableRow>
@@ -294,7 +432,7 @@ Unary operators operate on a single operand and modify its value by **1**.
   </TableRow>
 </TableHeader>
 
-{" "}
+<br />
 
 <TableBody>
   <TableRow>
