update alerts component and modules.mdx content

--- a/content/en-docs/getting-started/introduction.mdx
+++ b/content/en-docs/getting-started/introduction.mdx
@@ -3,7 +3,7 @@ title: Introduction
 weight: 1
 ---
 
-<ErrorAlert title="Under Development" />
+<UnderDevelopmentAlert title="Under Development" />
 
 # Documentation
 
