update syntax changes for code examples

--- a/content/en-docs/getting-started/introduction.mdx
+++ b/content/en-docs/getting-started/introduction.mdx
@@ -28,7 +28,7 @@ Here's a glimpse of what Cyrus code looks like:
 ```cyrus
 import std::io;
 
-func main() {
+fn main() {
   #msg: char* = "Hello, Cyrus!";
   io::printfn(msg);
 }
